--- a/app/src/main/res/layout/slide_item.xml
+++ b/app/src/main/res/layout/slide_item.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/ic_launcher_background" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/fab_slide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
