Làm phần xử lý menuItem và chỉnh sửa lại thêm giao diện phần của mình làm

--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
@@ -20,21 +22,37 @@
                 android:layout_marginRight="30dp"
                 android:background="@drawable/black_border_rounded_cornwe">
 
-                <EditText
-                    android:id="@+id/edt_old_password"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:background="@android:color/transparent"
-                    android:hint="Xin hãy điền vào mật khẩu cũ"
-                    android:maxLines="1"
-                    android:inputType="textPassword"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="15sp" />
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/white"
+                    app:hintAnimationEnabled="false"
+                    app:boxBackgroundMode="none"
+                    app:hintEnabled="false"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_old_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:maxLength="20"
+                        android:textAlignment="center"
+                        android:maxLines="1"
+                        android:textSize="15sp"
+                        android:hint="Mật khẩu cũ"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textColorHighlight="@color/white"
+                        android:paddingTop="15dp"
+                        android:paddingBottom="15dp"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:background="@android:color/transparent"
+                        tools:ignore="HardcodedText" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
 
 
             </RelativeLayout>
@@ -46,22 +64,36 @@
                 android:layout_marginRight="30dp"
                 android:background="@drawable/black_border_rounded_cornwe">
 
-                <EditText
-                    android:id="@+id/edt_new_password"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:background="@android:color/transparent"
-                    android:hint="Xin hãy điền vào mật khẩu mới"
-                    android:inputType="textPassword"
-                    android:maxLength="10"
-                    android:maxLines="1"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="15sp" />
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/white"
+                    app:hintAnimationEnabled="false"
+                    app:boxBackgroundMode="none"
+                    app:hintEnabled="false"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_new_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:maxLength="20"
+                        android:textAlignment="center"
+                        android:maxLines="1"
+                        android:textSize="15sp"
+                        android:hint="Mật khẩu mới"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textColorHighlight="@color/white"
+                        android:paddingTop="15dp"
+                        android:paddingBottom="15dp"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:background="@android:color/transparent"
+                        tools:ignore="HardcodedText" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </RelativeLayout>
 
@@ -74,22 +106,37 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/black_border_rounded_cornwe">
 
-                <EditText
-                    android:id="@+id/edt_confirm_password"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:background="@android:color/transparent"
-                    android:hint="Xác nhận mật khẩu mới"
-                    android:inputType="textPassword"
-                    android:maxLength="10"
-                    android:maxLines="1"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="15sp" />
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/white"
+                    app:hintAnimationEnabled="false"
+                    app:boxBackgroundMode="none"
+                    app:hintEnabled="false"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_confirm_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:maxLength="20"
+                        android:textAlignment="center"
+                        android:maxLines="1"
+                        android:textSize="15sp"
+                        android:hint="Xác nhận mật khẩu mới"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textColorHighlight="@color/white"
+                        android:paddingTop="15dp"
+                        android:paddingBottom="15dp"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:background="@android:color/transparent"
+                        tools:ignore="HardcodedText" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
