--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toTopOf="@+id/detail_movie_cover" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/play_movie"
+            android:id="@+id/fab_play_movie"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
