--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -7,17 +7,14 @@
     tools:context=".ui.MoviePlayerActivity"
     android:background="#000000">
 
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/movie_exo_player"
+    <WebView
+        android:id="@+id/movie_player"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shutter_background_color="#000000">
-
-    </com.google.android.exoplayer2.ui.PlayerView>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
