--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,9 +7,23 @@
         app:showAsAction="always"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
+    <item android:id="@+id/action_name"
+        app:showAsAction="never"
+        app:actionViewClass="android.media.tv.TvView"
+        android:title="Tên của tôi"/>
+
     <item android:id="@+id/action_login"
         android:title="Đăng nhập"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_profile"
+        app:showAsAction="never"
+        android:title="Hồ sơ"/>
+
+    <item android:id="@+id/action_mylist"
+        app:showAsAction="never"
+        android:title="Phim của tôi"/>
 
     <item android:id="@+id/action_logout"
         android:title="Đăng xuất"
